--- a/Scores_vs_Package.ipynb
+++ b/Scores_vs_Package.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "Scores vs Package",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOdt/RS0+YklmJ51T36Xe42",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Gishnurahul/Analytricks/blob/main/Scores_vs_Package.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
