--- a/Scores_vs_Package.ipynb
+++ b/Scores_vs_Package.ipynb
@@ -41,7 +41,7 @@
         "sns.set(font_scale=1.5)\n",
         "\n",
         "# Read in dataset\n",
-        "df = pd.read_csv('/content/Data1.csv')\n",
+        "df = pd.read_csv('Data1.csv')\n",
         "\n",
         "df.describe()"
       ],
