--- a/Scores_vs_Package.ipynb
+++ b/Scores_vs_Package.ipynb
@@ -41,8 +41,9 @@
         "sns.set(font_scale=1.5)\n",
         "\n",
         "# Read in dataset\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/Data1.csv?token=ARFLR6FSPTEDFDVMVCURQYS7PMBAC')\n",
-        "\n",
+        "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/7eb89d0af6c380fd262455b6cf3108395e24447c/Data1.csv?token=ARFLR6AODI4BXV74SKNU6WS7PMCNC'\n",
+        "\n", 
+        "df = pd.read_csv(url,index_col=0)\n",
         "df.describe()"
       ],
       "execution_count": null,
