--- a/Wine_Quality.ipynb
+++ b/Wine_Quality.ipynb
@@ -45,7 +45,7 @@
         "sns.set(font_scale=1.5)\n",
         "\n",
         "# Read in dataset\n",
-        "df = pd.read_csv('/content/winequality-red.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv?token=ARFLR6G75RFMTISH465K5KS7PSPAU')\n",
         "df.isnull().sum()"
       ],
       "execution_count": null,
