--- a/Wine_Quality.ipynb
+++ b/Wine_Quality.ipynb
@@ -45,8 +45,9 @@
         "sns.set(font_scale=1.5)\n",
         "\n",
         "# Read in dataset\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv?token=ARFLR6G75RFMTISH465K5KS7PSPAU')\n",
-        "df.isnull().sum()"
+        "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/Data12.csv?token=ARFLR6HWK3GT63QKVQ43U2S7PQJMQ'\n",
+        "df = pd.read_csv(url,index_col=0)\n",
+        "df.isnull().sum()/n"
       ],
       "execution_count": null,
       "outputs": [
