--- a/Wine_Quality.ipynb
+++ b/Wine_Quality.ipynb
@@ -47,7 +47,7 @@
         "# Read in dataset\n",
         "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/Data12.csv?token=ARFLR6HWK3GT63QKVQ43U2S7PQJMQ'\n",
         "df = pd.read_csv(url,index_col=0)\n",
-        "df.isnull().sum()/n"
+        "df.isnull().sum()\n"
       ],
       "execution_count": null,
       "outputs": [
