--- a/Wine_Quality.ipynb
+++ b/Wine_Quality.ipynb
@@ -45,8 +45,8 @@
         "sns.set(font_scale=1.5)\n",
         "\n",
         "# Read in dataset\n",
-        "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv?token=ARFLR6FLZ3A5AKGNHWEJ4BS7PSQPW'\n",
-        "df = pd.read_csv(url,index_col=0)\n",
+        "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv?token=ARFLR6GJ737EQNMI723BEJK7PSXJM'\n",
+        "df= pd.read_csv(url)\n",
         "df.isnull().sum()\n"
       ],
       "execution_count": null,
