--- a/Wine_Quality.ipynb
+++ b/Wine_Quality.ipynb
@@ -27,12 +27,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TKJSsDxVQF58",
-        "outputId": "d3a60ac5-1ae7-4b4f-821e-76840c2ec053",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 248
-        }
+        "id": "TKJSsDxVQF58"
       },
       "source": [
         "# Imports \n",
@@ -46,40 +41,15 @@
         "\n",
         "# Read in dataset\n",
         "\n",
-        "#url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv?token=ARFLR6GJ737EQNMI723BEJK7PSXJM'\n",
+        "url = 'https://raw.githubusercontent.com/Gishnurahul/Analytricks/main/winequality-red.csv'\n",
         "\n",
-        "#df= pd.read_csv(url)\n",
+        "df= pd.read_csv(url)\n",
         "#df = pd.read_csv(url,index_col=0)\n",
-        "df = pd.read_csv('/content/winequality-red.csv')\n",
-        "df.isnull().sum()"
+        "#df = pd.read_csv('/content/winequality-red.csv')\n",
+        "#df.isnull().sum()"
       ],
-      "execution_count": 236,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "fixed acidity           0\n",
-              "volatile acidity        0\n",
-              "citric acid             0\n",
-              "residual sugar          0\n",
-              "chlorides               0\n",
-              "free sulfur dioxide     0\n",
-              "total sulfur dioxide    0\n",
-              "density                 0\n",
-              "pH                      0\n",
-              "sulphates               0\n",
-              "alcohol                 0\n",
-              "quality                 0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 236
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -95,7 +65,7 @@
         "plt.figure(figsize=(14,8)) # set thaciditye size of the graph\n",
         "_ = sns.regplot(data=df, x='volatile acidity', y='quality', color='blue')"
       ],
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -125,7 +95,7 @@
         "plt.figure(figsize=(14,8)) # set the size of the graph\n",
         "_ = sns.regplot(data=df, x='alcohol', y='quality', color='black')"
       ],
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -162,7 +132,7 @@
         "                yticklabels=corr.columns.values,\n",
         "                cmap='RdBu')"
       ],
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -188,7 +158,7 @@
         "#from sklearn.datasets import load_iris\n",
         "x_train,x_test,y_train,y_test=train_test_split(X,Y,test_size=0.02)\n"
       ],
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +180,7 @@
         "regr.fit(X, Y)\n",
         "regr.score(x_test,y_test)"
       ],
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +213,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(y_test,predictions)"
       ],
-      "execution_count": 245,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +254,7 @@
       "source": [
         "regr.score(x_test,y_test)"
       ],
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +289,7 @@
         "selectregr.fit(Vo_Alc, Q)\n",
         "selectregr.score(Vo_Alc, Q)"
       ],
-      "execution_count": 250,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +321,7 @@
         "\n",
         "print(predictedquality)"
       ],
-      "execution_count": 249,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
